assets/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --text-primary: white;
    --text-secondary: #ececec;
    --bg-home: #23252E;
    --bg-about: #1CAC8F;
    --bg-skill: #FFC107;
    --bg-job: #483D8B;
    --bg-contact: #d42058;
    --bg-primary: #23252E;
    --bg-secondary: #272A34;
    --contrast-color: #89E234;
    --transition-speed: 600ms;

    font-size: 16px;
    font-family: Montserrat, sans-serif;
}

body {
    color: var(--text-primary);
    background-color: var(--bg-secondary);
    margin: 0;
    padding: 0;
    overflow: hidden;
}

body::-webkit-scrollbar {
    width: 0.25rem;
}

body::-webkit-scrollbar-track {
    background: var(--bg-primary);
}

body::-webkit-scrollbar-thumb {
    background: var(--contrast-color);
}

.container {
    background-color: var(--bg-secondary);
    min-height: 100vh;
}

#menu {
    position: fixed;
    left: 0;
    z-index: 50;
    display: flex;
    justify-content: space-around;
    flex-direction: column;
    height: 100vh;
    background-color: var(--bg-primary);
}

#menu a {
    font-size: 40px;
    color: #fff;
    text-decoration: none;
    padding: 20px;
    text-align: center;
    transition: var(--transition-speed);
}


#menu a:hover {
    filter: grayscale(0%) opacity(1);
    background: var(--bg-secondary);
    color: var(--contrast-color);
}

.active {
    filter: grayscale(0%) opacity(1);
}


#menu a span {
    display: none;
    margin-left: 1rem;
}


section {
    position: absolute;
    top: 0;
    height: 100vh;
    width: 0;
    opacity: 0;
    transition: all ease-in .5s;
    display: flex;
    justify-content: center;
    align-items: center;
}

section h1 {
    color: #fff;
    font-size: 50px;
    text-transform: uppercase;
    opacity: 0;
    padding: 1.4rem 0;
}

section h2 {
    padding: 1.4rem 0;
}

section p {
    line-height: 2.2rem;
}

/* Styles applied on trigger */
section:target {
    opacity: 1;
    position: absolute;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 10;
}

section:target * {
    opacity: 0;
    animation: 1s fadeIn forwards .5s;
}

#home {
    background: var(--bg-home);
    display: flex;
    justify-content: center;
    align-items: center;
}



article {
    max-width: 64rem;
    text-align: left;

}

#about {
    background: var(--bg-about);
}


#about img {
    width: 2rem;
    height: auto;
    color: var(--text-primary);
}


#skill {
    background: var(--bg-skill);
}

#job {
    background: var(--bg-job);
}

#job section {
    display: flex;
    flex-direction: column;
  }

#job div {
    display: flex;
    flex-direction: row;
}

  
#job #description {
    display: flex;
    flex-direction: column;
}


#job #role {
    display: flex;
    flex-direction: column;
}

#job #role h2, #job #tech h2 {
    text-align: left;
    margin-top: 1.4rem;
    padding: 0 1.4rem;
}

  
#job #tech {
    display: flex;
    flex-direction: column;
    text-align: center;
  }


#tech nav {
    width: 100%;
    overflow: auto;
}

#tech nav ul {
    list-style: none;
    text-align: left;
}

#tech nav ul li {
    float: left;
    padding: 12px;
    text-decoration: none;
    font-size: 17px;
    width: 25%; /* Four links of equal widths */
    
}

#tech nav ul li:hover {
    font-weight: 700;
    cursor: pointer;
}

#tech nav ul li.active {
    background-color: #04AA6D;
}


#tech nav ul li:before {
    content: 'arrow_forward_ios';
    font-family: 'Material Icons';
    color: var(--contrast-color);
    font-size: 1.4rem;
    font-weight: 700;
}


#jobmenu ul{
    padding-left: 50px;
    position: relative;
    list-style: none;
    min-width: 15rem;
}


#jobmenu ul::after{
    content: "";
    position: absolute;
    width: 3px;
    height: calc(100% - 58px);
    left: 40px;
    top: 0;
    background-color: var(--text-primary);
    z-index: -1;
    margin-top: 29px;
}

#jobmenu ul li {
    display: flex;
    flex-direction: column;
    padding: 30px 0;
    padding-left: 20px;
}

#jobmenu ul li span {
    margin-top: 1rem;
    font-size: 0.8rem;
}

#jobmenu ul li a {
    text-decoration: none;
    position: relative;
    color: var(--text-primary);
    font-size: 1.4rem;
    line-height: 1rem;
    font-weight: 500;
}

#jobmenu ul li a::before{
    content: "";
    position: absolute;
    background-color: var(--bg-job);
    width: 18px;
    height: 18px;
    left: -42px;
    top: 50%;
    transform: translateY(-50%);
    border-radius: 50px;  
    border: 4px solid var(--text-primary);  
    transition: background 250ms;
}

#jobmenu ul li a.activejob {
    font-weight: 700;
}

#jobmenu ul li a.activejob::before {
    background-color: var(--contrast-color);
}


#role nav {
    padding: 20px;
    
}

#role nav ul {
    list-style: none;
}

#role nav ul li {
    line-height: 2rem;
    margin-bottom: 1rem;
}

#role nav ul li:before {
        content: 'arrow_forward_ios';
        font-family: 'Material Icons';
        color: var(--contrast-color);
        font-size: 1.4rem;
        font-weight: 700;
        top: 50%;
}


#contact {
    background: var(--bg-contact);
}

#contact img {
    width: 2rem;
    height: auto;
}

#contact a {
    text-decoration: none;
    font-weight: bold;
    color: var(--contrast-color)
}

@keyframes fadeIn {
    100% {
        opacity: 1
    }
}


/* Small screens */
@media only screen and (max-width: 600px) {
    #menu  {
        bottom: 0;
        width: 100vw;
        height: 5rem;
        flex-direction: row;
    }

    #menu  a {
        justify-content: center;
    }

    main {
        margin: 0;
    }
}

